Made it so that you set the project directory when making a new project, the docker files are now stored in the set directory and I have started work on running the dockersetup from the program.